--- a/finalpillar/index.html
+++ b/finalpillar/index.html
@@ -18,10 +18,10 @@
         <div id="links">
             <a class="link" href="https://finalpillar.com"  rel="noopener">Main Website</a>
             <a class="link" href="mailto:finalpillar@protonmail.com" rel="noopener">Submit a Tip (Email)</a>
-            <a class="link" href="https://siiimple.com/" rel="noopener">Contact</a>
-            <a class="link" href="https://www.netflix.com/de/title/80114460"  rel="noopener">Contribute</a>
+            <a class="link" href="https://instagram.com/finalpillar" rel="noopener">Contact</a>
+            <a class="link" href="#"  rel="noopener">Contribute</a>
             <a class="link" href="../privacy/index.html" rel="noopener">Privacy Notice</a>
-            <a class="link" href="https://siiimple.com/" rel="noopener">Decentralized Mirror</a>
+            <a class="link" href="https://cg049aq6kl3loope2kl5hl56kuk086p6ld2uf35artteog6dpo5bvg8.siasky.net/" rel="noopener">Decentralized Mirror</a>
         </div>
 
         <footer>
