--- a/finalpillar/index.html
+++ b/finalpillar/index.html
@@ -21,7 +21,7 @@
             <a class="link" href="https://instagram.com/finalpillar" rel="noopener">Contact</a>
             <a class="link" href="#"  rel="noopener">Contribute</a>
             <a class="link" href="../privacy/index.html" rel="noopener">Privacy Notice</a>
-            <a class="link" href="https://cg049aq6kl3loope2kl5hl56kuk086p6ld2uf35artteog6dpo5bvg8.siasky.net/" rel="noopener">Decentralized Mirror</a>
+            <a class="link" href="https://siasky.net/ZABEq0alR1xjLhUqWNSmp6gEGyarReeMqt967EDNzgq_wQ/finalpillar/" rel="noopener">Decentralized Mirror</a>
         </div>
 
         <footer>
