--- a/finalpillar/index.html
+++ b/finalpillar/index.html
@@ -16,10 +16,10 @@
 
         <h1><a href="index.html" id="userName" rel="noopener">Final Pillar</a></h1>
         <div id="links">
-            <a class="link" href="https://finalpillar.com"  rel="noopener">Main Website</a>
+            <a class="link" href="https://finalpillar.com"  rel="noopener">finalpillar.com</a>
             <a class="link" href="mailto:finalpillar@protonmail.com" rel="noopener">Submit a Tip (Email)</a>
-            <a class="link" href="https://instagram.com/finalpillar" rel="noopener">Contact</a>
-            <a class="link" href="#"  rel="noopener">Contribute</a>
+            <a class="link" href="https://instagram.com/finalpillar" rel="noopener">Social</a>
+            <a class="link" href="https://finalpillar.com/fpjournalists"  rel="noopener">Join FP</a>
             <a class="link" href="../privacy/index.html" rel="noopener">Privacy Notice</a>
             <a class="link" href="https://siasky.net/ZABEq0alR1xjLhUqWNSmp6gEGyarReeMqt967EDNzgq_wQ/finalpillar/" rel="noopener">Decentralized Mirror</a>
         </div>
