--- a/index.html
+++ b/index.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="files/img/favicon.ico" type="image/x-icon" />
 
-    <title>fp.fyi</title>
+
+<meta http-equiv="refresh" content="0; URL=https://finalpillar.com/" />
+
+
 </head>
-<body>
-      <div class="container">
-        <h1>fp.fyi</h1>
-      </div>  
-</body>
-</html>
