--- a/finalpillar/privacy/index.html
+++ b/finalpillar/privacy/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, user-scalable=0">
-    <title>Money Bible</title>
+    <title>Privacy Policy</title>
     <link rel="stylesheet" type="text/css" href="../web/index.css">
     <style>a, .tint, .table-btn:after {color: #007AFF} .active {color: #007AFF;border-bottom: 2px solid #007AFF;}</style>
     <script src="../web/index.js"></script>
