--- a/finalpillar/contribute/usdcoin.html
+++ b/finalpillar/contribute/usdcoin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, user-scalable=0">
-    <title>Bitcoin Address</title>
+    <title>USDC Address</title>
     <link rel="stylesheet" type="text/css" href="../web/index.css">
     <style>a, .tint, .table-btn:after {color: #eb3434} .active {color: #eb3434;border-bottom: 2px solid #eb3434;}</style>
     <script src="../web/index.js"></script>
